--- a/index.html
+++ b/index.html
@@ -2,107 +2,209 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEAMROHITOFFICAL45</title>
+    <meta name="description" content="ENJOY FREE LIVE ">
+    <meta name="keywords" content="JIOTV, LIVETV, SPORTS, MOVIES, MUSIC">
+    <meta name="author" content="unknown">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>TEAMROHITOFFICAL45_LIVE</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/plyr@3.6.2/dist/plyr.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.1.4/dist/hls.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+
     <style>
-        /* General Page Styling */
-        body {
-            font-family: 'Arial', sans-serif;
+        /* Base styles */
+        html {
+            font-family: Poppins;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #242424, #3b5998);
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            text-align: center;
         }
 
-        /* Glowing Effect for Message */
-        .loading-message {
-            font-size: 18px;
-            font-weight: bold;
-            color: #ffcc00;
-            margin-bottom: 10px;
-            padding: 10px 20px;
-            border-radius: 10px;
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            text-align: center;
-            box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00;
-            animation: glow 1.5s infinite alternate;
-        }
-
-        @keyframes glow {
-            0% { box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00; }
-            100% { box-shadow: 0 0 15px #ffcc00, 0 0 25px #ffcc00, 0 0 35px #ffcc00; }
-        }
-
-        /* Video Player Styling */
-        .player-container {
-            width: 95%;
-            max-width: 1200px;
-            margin: 20px auto;
-            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
-            border-radius: 15px;
-            overflow: hidden;
+        body {
             background: #000;
+            color: #fff;
+            position: relative; /* Ensure watermark is positioned correctly */
         }
 
-        .player-container iframe {
-            border-radius: 15px;
+        .loading {
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
+            background: #000;
+            z-index: 9999;
         }
 
-        /* Join Telegram Button */
-        .join-telegram-container {
-            margin-top: 20px;
+        .loading-text {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
             text-align: center;
+            width: 100%;
+            height: 100px;
+            line-height: 100px;
         }
 
-        .join-telegram-btn {
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: bold;
-            color: white;
-            background-color: #008fd6;
-            border: none;
+        .loading-text span {
+            display: inline-block;
+            margin: 0 5px;
+            color: #00b3ff;
+            font-family: 'Quattrocento Sans', sans-serif;
+        }
+
+        /* Position watermark on the right side */
+        .watermark {
+            position: absolute;
+            bottom: 2px;  /* Even smaller distance from the bottom */
+            right: 2px;   /* Position watermark on the right side */
+            font-size: 8px;  /* Much smaller font size */
+            color: rgba(255, 255, 255, 0.2); /* White color with higher transparency */
+            font-style: italic;
+            pointer-events: none; /* Prevent interaction with the video */
+            z-index: 10; /* Ensure it's above the video */
+            font-family: "Courier New", Courier, monospace; /* Monospace font to match the style */
+        }
+
+        /* Plyr video wrapper custom styling */
+        .plyr__video-wrapper::after {
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            z-index: 10;
+            content: '';
+            height: 50px;
+            width: 100px;
+            background: url('') no-repeat;
+            background-size: 100px, auto, auto;
+        }
+
+        /* Smaller Telegram button styling */
+        .telegram-button {
+            display: block;
+            margin: 20px auto;
+            padding: 6px 10px;
+            background-color: #0088cc;
+            color: #fff;
+            text-align: center;
+            font-size: 14px;
+            text-decoration: none;
             border-radius: 5px;
-            cursor: pointer;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            width: 140px;
+            transition: background-color 0.3s ease;
         }
 
-        .join-telegram-btn:hover {
-            background-color: #006bb3;
+        .telegram-button:hover {
+            background-color: #006a99;
         }
     </style>
 </head>
 <body>
 
-    <!-- Loading Message -->
-    <div class="loading-message">Share The Link With Your Friends</div>
-
-    <!-- Video Player Section -->
-    <div class="player-container">
-        <div style="padding:56.25% 0 0 0;position:relative;">
-            <iframe id="contentFrame" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" 
-            frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no" 
-            src="https://live.ugreen.autos/live/channel.php?ch=es28" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+    <!-- Loading screen -->
+    <div class="loading" id="loading">
+        <div class="loading-text">
+            <span>T</span><span>E</span><span>A</span><span>M</span><span>R</span><span>O</span><span>H</span><span>I</span><span>T</span><span>O</span><span>F</span><span>F</span><span>I</span><span>C</span><span>A</span><span>L</span><span>4</span><span>5</span>
         </div>
     </div>
 
-    <!-- Join Telegram Button -->
-    <div class="join-telegram-container">
-        <button class="join-telegram-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank')">Join Telegram Channel</button>
+    <!-- Video Player -->
+    <div style="position: relative;">
+        <video id="player" autoplay controls crossorigin playsinline style="--plyr-color-main:#15b4ff; width: 100%;">
+            <source id="m3u8-url" src="" type="application/x-mpegURL">
+        </video>
+
+        <!-- Watermark -->
+        <div class="watermark">
+            𝙏𝙀𝘼𝙈𝙍𝙊𝙃𝙄𝙏𝙊𝙁𝙁𝙄𝘾𝙄𝘼𝙇𝟰𝟱
+        </div>
     </div>
-<script>
-// alert('Join Our Telegram For Latest update')
-         if (confirm("Join Our Telegram Channel @teamrohitoffical45") == true) {
-         window.open("https://t.me/+Abr6OELq5KZkZjNl", '_blank');
-     }
-</script>
+
+    <!-- Telegram Channel Button -->
+    <a href="https://t.me/+lkbpBqFd0FljNzJl" class="telegram-button" target="_blank">
+        Join Our Telegram Channel
+    </a>
+
+    <script>
+        // Check for 'id' parameter in the URL
+        var urlParams = new URLSearchParams(window.location.search),
+            maxvalue = urlParams.get("id");
+
+        // If the URL parameter is available, set the video source
+        if (maxvalue && maxvalue.trim() !== "") {
+            document.getElementById("m3u8-url").setAttribute("src", maxvalue);
+        }
+
+        // Function to hide loading screen after the video is ready
+        setTimeout(videovisible, 1000);
+        function videovisible() {
+            var loadingElement = document.getElementById('loading');
+            if (loadingElement) {
+                loadingElement.style.display = 'none';
+            }
+        }
+
+        // Poster URL (Old Poster)
+        var oldPosterURL = "https://i.postimg.cc/Y0918Y71/IMG-20240810-011453-139.jpg"; // Original poster URL
+
+        // Check if the poster image is valid
+        var video = document.getElementById('player');
+        var posterURL = oldPosterURL; // Use the old poster URL
+
+        var img = new Image(); // Create a new image object
+        img.onload = function() {
+            // If the image loads correctly, the poster is valid, do nothing
+        };
+
+        img.onerror = function() {
+            // If the poster image fails to load, set a fallback image
+            console.log('Poster image failed to load, using fallback.');
+            video.setAttribute('poster', 'https://example.com/fallback-poster.jpg'); // Fallback image
+        };
+
+        img.src = posterURL; // Set the image source to check if the poster is valid
+
+        // Set the valid poster
+        video.setAttribute('poster', posterURL);
+
+        // Plyr setup with HLS.js for live streaming
+        document.addEventListener("DOMContentLoaded", () => {
+            const e = document.querySelector("video"),
+                n = e.getElementsByTagName("source")[0].src,
+                o = {};
+            if (Hls.isSupported()) {
+                var config = {
+                    maxMaxBufferLength: 100,
+                };
+                const t = new Hls(config);
+                t.loadSource(n), t.on(Hls.Events.MANIFEST_PARSED, function (n, l) {
+                    const s = t.levels.map(e => e.height);
+                    o.quality = {
+                        default: s[0],
+                        options: s,
+                        forced: !0,
+                        onChange: e => {
+                            window.hls.levels.forEach((n, o) => {
+                                if (n.height === e) {
+                                    window.hls.currentLevel = o;
+                                }
+                            });
+                        }
+                    };
+                    new Plyr(e, o);
+                });
+                t.attachMedia(e);
+                window.hls = t;
+            } else {
+                new Plyr(e, o);
+            }
+        });
+    </script>
+
 </body>
 </html>
