--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
             try {
                 const response = await fetch("https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.json");
                 const data = await response.json();
-
                 const container = document.getElementById("events");
                 container.innerHTML = "";
 
@@ -129,8 +128,11 @@
                         const eventDiv = document.createElement("div");
                         eventDiv.classList.add("event");
 
-                        const isLive = event.status === "LIVE";
-                        const videoLink = event.dai_url ? `https://p.apeiria.net/~Teamrom3u8plyr.html?id=${event.dai_url}` : "#";
+                        let eventDate = new Date(event.startTime);
+                        let formattedDate = eventDate.toLocaleDateString();
+                        let formattedTime = eventDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+                        let isLive = event.status === "LIVE";
+                        let videoLink = event.dai_url ? `https://p.apeiria.net/~Teamrom3u8plyr.html?id=${event.dai_url}` : "#";
 
                         eventDiv.innerHTML = `
                             <img src="${event.src}" alt="${event.title}">
