--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEAMROHITOFFICAL45</title>
     <style>
-        /* General Page Styling */
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -20,7 +19,6 @@
             text-align: center;
         }
 
-        /* Glowing Effect for Message */
         .loading-message {
             font-size: 18px;
             font-weight: bold;
@@ -40,7 +38,6 @@
             100% { box-shadow: 0 0 15px #ffcc00, 0 0 25px #ffcc00, 0 0 35px #ffcc00; }
         }
 
-        /* Video Player Styling */
         .player-container {
             width: 95%;
             max-width: 1200px;
@@ -57,7 +54,6 @@
             height: 100%;
         }
 
-        /* Join Telegram Button */
         .join-telegram-container {
             margin-top: 20px;
             text-align: center;
@@ -82,19 +78,17 @@
 </head>
 <body>
 
-    <!-- Loading Message -->
     <div class="loading-message">Share The Link With Your Friends</div>
 
-    <!-- Video Player Section -->
     <div class="player-container">
         <div style="padding:56.25% 0 0 0;position:relative;">
-            <iframe id="contentFrame" 
-            frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no" 
-            src="https://cdn.crichdplays.ru/embed2.php?id=criclife1&v=so" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+            <iframe id="contentFrame"
+                frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no"
+                src="https://cdn.crichdplays.ru/embed2.php?id=criclife1&v=so"
+                style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
         </div>
     </div>
 
-    <!-- Join Telegram Button -->
     <div class="join-telegram-container">
         <button class="join-telegram-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank')">Join Telegram Channel</button>
     </div>
