--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
   <iframe 
     src="https://cdn.crichdplays.ru/embed2.php?id=criclife1&v=so" 
+    sandbox="allow-scripts allow-same-origin" 
     allowfullscreen>
   </iframe>
 </body>
