--- a/index.html
+++ b/index.html
@@ -88,21 +88,25 @@
     <!-- Video Player Section -->
     <div class="player-container">
         <div style="padding:56.25% 0 0 0;position:relative;">
-            <iframe id="contentFrame" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" 
-            frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no" 
-            src="https://toxifylive.github.io/Astro-/" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+            <iframe
+                id="contentFrame"
+                sandbox="allow-scripts allow-same-origin allow-forms"
+                allow="autoplay; encrypted-media"
+                frameborder="0"
+                allowfullscreen
+                scrolling="no"
+                src="https://toxifylive.github.io/Astro-/"
+                style="position:absolute;top:0;left:0;width:100%;height:100%;">
+            </iframe>
         </div>
     </div>
 
     <!-- Join Telegram Button -->
     <div class="join-telegram-container">
-        <button class="join-telegram-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank')">Join Telegram Channel</button>
+        <button class="join-telegram-btn" onclick="window.open('https://t.me/+Abr6OELq5KZkZjNl', '_blank')">
+            Join Telegram Channel
+        </button>
     </div>
-<script>
-// alert('Join Our Telegram For Latest update')
-         if (confirm("Join Our Telegram Channel @teamrohitoffical45") == true) {
-         window.open("https://t.me/+Abr6OELq5KZkZjNl", '_blank');
-     }
-</script>
+
 </body>
 </html>
