--- a/index.html
+++ b/index.html
@@ -1,197 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link rel="shortcut icon" href="https://drmlive.in/sports/fancode.png" />
-  <title>Telegram-Live-Cric-Hd</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@400;700&display=swap">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #000;
-      color: #fff;
-      transition: background-color 0.3s, color 0.3s;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TEAMROHITOFFICAL45_LIVE</title>
+    <style>
+        @keyframes heartbeat {
+            0% { transform: scale(1); box-shadow: 0 0 10px rgba(255, 215, 0, 0.5); }
+            50% { transform: scale(1.02); box-shadow: 0 0 20px rgba(255, 215, 0, 0.8); }
+            100% { transform: scale(1); box-shadow: 0 0 10px rgba(255, 215, 0, 0.5); }
+        }
 
-    h1 {
-      text-align: center;
-      color: #ff3700;
-      margin-bottom: 20px;
-      font-family: 'Montserrat', sans-serif;
-    }
+        @keyframes livePulse {
+            0% { transform: scale(1); opacity: 1; }
+            50% { transform: scale(1.2); opacity: 0.7; }
+            100% { transform: scale(1); opacity: 1; }
+        }
 
-    .file-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-      padding: 10px;
-    }
-
-    .match-item {
-      margin: 10px;
-      text-align: center;
-      border-radius: 8px;
-      overflow: hidden;
-      background-color: #1a1a1a;
-      padding: 20px;
-      width: calc(25% - 20px);
-      box-sizing: border-box;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: pointer;
-    }
-
-    .match-item img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 0 auto 10px auto;
-    }
-
-    .match-item h3,
-    .match-item p {
-      font-family: 'Montserrat', sans-serif;
-      margin: 0;
-      text-transform: uppercase;
-    }
-
-    .match-item h3 {
-      font-weight: 700;
-      margin-bottom: 15px;
-    }
-
-    .match-item p {
-      font-weight: 400;
-      margin-bottom: 15px;
-    }
-
-    .status-live {
-      color: yellow;
-      animation: glow 1s infinite alternate;
-    }
-
-    @keyframes glow {
-      0% {
-        text-shadow: 0 0 5px yellow;
-      }
-      100% {
-        text-shadow: 0 0 15px yellow;
-      }
-    }
-
-    .status-upcoming {
-      color: #777;
-      opacity: 0.6;
-    }
-
-    .telegram-toggle {
-      background-color: #ffcc00;
-      color: black;
-      padding: 10px 15px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: bold;
-      display: block;
-      margin: 20px auto;
-      width: fit-content;
-      transition: background-color 0.3s;
-      text-align: center;
-    }
-
-    .telegram-toggle:hover {
-      background-color: #e6b800;
-    }
-
-    .stream-button {
-      padding: 10px 15px;
-      margin: 5px;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
-      color: white;
-    }
-
-    .adfree-button {
-      background-color: #28a745;
-    }
-
-    .adfree-button:hover {
-      background-color: #218838;
-    }
-
-    .button-container {
-      margin-top: 10px;
-    }
-
-    @media (max-width: 768px) {
-      .match-item {
-        width: calc(50% - 20px);
-      }
-    }
-
-    @media (max-width: 480px) {
-      .match-item {
-        width: calc(100% - 20px);
-      }
-    }
-  </style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background: #121212;
+            color: white;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 26px;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+        }
+        .event-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+        .event {
+            width: 400px;
+            background: #222;
+            border-radius: 12px;
+            overflow: hidden;
+            position: relative;
+            padding-bottom: 15px;
+            animation: heartbeat 3s infinite;
+            transition: transform 0.3s;
+        }
+        .event:hover {
+            transform: scale(1.03);
+        }
+        .event img {
+            width: 100%;
+            height: 220px;
+            object-fit: cover;
+            border-top-left-radius: 12px;
+            border-top-right-radius: 12px;
+        }
+        .event-content {
+            padding: 15px;
+        }
+        .title {
+            font-size: 18px;
+            font-weight: bold;
+            color: white;
+            margin-bottom: 5px;
+        }
+        .league {
+            font-size: 14px;
+            color: #bbb;
+            margin-bottom: 10px;
+        }
+        .buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            margin-top: 15px;
+        }
+        .watch-btn {
+            display: block;
+            width: 90%;
+            padding: 12px;
+            background: transparent;
+            color: white;
+            text-decoration: none;
+            border: 2px solid gold;
+            border-radius: 8px;
+            font-size: 16px;
+            font-weight: bold;
+            margin: 0 auto;
+            text-align: center;
+            transition: all 0.3s ease-in-out;
+        }
+        .watch-btn:hover {
+            background: gold;
+            color: black;
+            transform: scale(1.1);
+            box-shadow: 0 0 25px gold;
+        }
+        .live-badge {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: red;
+            color: white;
+            font-size: 12px;
+            font-weight: bold;
+            padding: 5px 10px;
+            border-radius: 5px;
+            animation: livePulse 1.5s infinite;
+        }
+    </style>
 </head>
 <body>
-  <h1>Fancode Matches</h1>
-  <a href="https://telegram.me/livecrichdofficial" class="telegram-toggle">Join Telegram</a>
-  <div class="file-container" id="matches"></div>
 
-  <script>
-    async function fetchMatches() {
-      try {
-        const response = await fetch("https://raw.githubusercontent.com/drmlive/fancode-live-events/main/fancode.json");
-        const data = await response.json();
-        const container = document.getElementById("matches");
-        const shownIds = new Set();
+    <h1>Live Events</h1>
+    <div class="event-container" id="events"></div>
 
-        // Sort matches to show LIVE ones first
-        data.matches.sort((a, b) => {
-          if (a.status.toLowerCase() === "live" && b.status.toLowerCase() !== "live") return -1;
-          if (a.status.toLowerCase() !== "live" && b.status.toLowerCase() === "live") return 1;
-          return 0;
-        });
+    <script>
+        async function fetchEvents() {
+            try {
+                const response = await fetch("https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.json");
+                const data = await response.json();
 
-        data.matches.forEach(match => {
-          if (!shownIds.has(match.match_id)) {
-            const item = document.createElement("div");
-            item.className = "match-item";
+                const container = document.getElementById("events");
+                container.innerHTML = "";
 
-            const statusClass = match.status.toLowerCase() === "live" ? "status-live" : "status-upcoming";
+                if (data.matches && Array.isArray(data.matches)) {
+                    data.matches.forEach(event => {
+                        const eventDiv = document.createElement("div");
+                        eventDiv.classList.add("event");
 
-            item.innerHTML = `
-              <img src="${match.src}" alt="${match.title}">
-              <h3>${match.team_1} vs ${match.team_2}</h3>
-              <p>${match.event_name}</p>
-              <p class="${statusClass}">${match.status}</p>
-              <div class="button-container">
-                <button class="stream-button adfree-button" data-url="${match.adfree_url}">Watch Now</button>
-              </div>
-            `;
+                        let isLive = event.status === "LIVE";
+                        let videoLink = event.dai_url ? `https://p.apeiria.net/~Teamrom3u8plyr.html?id=${event.dai_url}` : "#";
 
-            item.querySelector(".adfree-button").addEventListener("click", () => {
-              window.location.href = `https://p.apeiria.net/~Teamrom3u8plyr.html?id=${match.match_id}`;
-            });
+                        eventDiv.innerHTML = `
+                            <img src="${event.src}" alt="${event.title}">
+                            ${isLive ? `<div class="live-badge">LIVE</div>` : ""}
+                            <div class="event-content">
+                                <div class="title">${event.title}</div>
+                                <div class="league">${event.event_name}</div>
+                                <div class="buttons">
+                                    ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Watch Now</a>` : ''}
+                                    ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Ad-Free</a>` : ''}
+                                </div>
+                            </div>
+                        `;
+                        container.appendChild(eventDiv);
+                    });
+                } else {
+                    console.error("No 'matches' found in the data.");
+                }
+            } catch (error) {
+                console.error("Error fetching events:", error);
+            }
+        }
 
-            container.appendChild(item);
-            shownIds.add(match.match_id);
-          }
-        });
+        fetchEvents();
+    </script>
 
-      } catch (error) {
-        console.error("Error fetching matches:", error);
-      }
-    }
-
-    fetchMatches();
-  </script>
 </body>
 </html>
