--- a/index.html
+++ b/index.html
@@ -1,172 +1,108 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEAMROHITOFFICAL45_LIVE</title>
     <style>
-        @keyframes heartbeat {
-            0% { transform: scale(1); box-shadow: 0 0 10px rgba(255, 215, 0, 0.5); }
-            50% { transform: scale(1.02); box-shadow: 0 0 20px rgba(255, 215, 0, 0.8); }
-            100% { transform: scale(1); box-shadow: 0 0 10px rgba(255, 215, 0, 0.5); }
-        }
-
-        @keyframes livePulse {
-            0% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.2); opacity: 0.7; }
-            100% { transform: scale(1); opacity: 1; }
-        }
-
+        /* General Page Styling */
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background: #121212;
-            color: white;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 26px;
-            text-transform: uppercase;
-            margin-bottom: 20px;
-        }
-        .event-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-        }
-        .event {
-            width: 400px;
-            background: #222;
-            border-radius: 12px;
-            overflow: hidden;
-            position: relative;
-            padding-bottom: 15px;
-            animation: heartbeat 3s infinite;
-            transition: transform 0.3s;
-        }
-        .event:hover {
-            transform: scale(1.03);
-        }
-        .event img {
-            width: 100%;
-            height: 220px;
-            object-fit: cover;
-            border-top-left-radius: 12px;
-            border-top-right-radius: 12px;
-        }
-        .event-content {
-            padding: 15px;
-        }
-        .title {
-            font-size: 18px;
-            font-weight: bold;
-            color: white;
-            margin-bottom: 5px;
-        }
-        .league {
-            font-size: 14px;
-            color: #bbb;
-            margin-bottom: 10px;
-        }
-        .buttons {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #242424, #3b5998);
+            color: #fff;
             display: flex;
             flex-direction: column;
-            gap: 10px;
-            margin-top: 15px;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            text-align: center;
         }
-        .watch-btn {
-            display: block;
-            width: 90%;
-            padding: 12px;
-            background: transparent;
-            color: white;
-            text-decoration: none;
-            border: 2px solid gold;
-            border-radius: 8px;
+
+        /* Glowing Effect for Message */
+        .loading-message {
+            font-size: 18px;
+            font-weight: bold;
+            color: #ffcc00;
+            margin-bottom: 10px;
+            padding: 10px 20px;
+            border-radius: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            text-align: center;
+            box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00;
+            animation: glow 1.5s infinite alternate;
+        }
+
+        @keyframes glow {
+            0% { box-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00, 0 0 30px #ffcc00; }
+            100% { box-shadow: 0 0 15px #ffcc00, 0 0 25px #ffcc00, 0 0 35px #ffcc00; }
+        }
+
+        /* Video Player Styling */
+        .player-container {
+            width: 95%;
+            max-width: 1200px;
+            margin: 20px auto;
+            box-shadow: 0 6px 25px rgba(0, 0, 0, 0.4);
+            border-radius: 15px;
+            overflow: hidden;
+            background: #000;
+        }
+
+        .player-container iframe {
+            border-radius: 15px;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Join Telegram Button */
+        .join-telegram-container {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .join-telegram-btn {
+            padding: 10px 20px;
             font-size: 16px;
             font-weight: bold;
-            margin: 0 auto;
-            text-align: center;
-            transition: all 0.3s ease-in-out;
-        }
-        .watch-btn:hover {
-            background: gold;
-            color: black;
-            transform: scale(1.1);
-            box-shadow: 0 0 25px gold;
-        }
-        .live-badge {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background: red;
             color: white;
-            font-size: 12px;
-            font-weight: bold;
-            padding: 5px 10px;
+            background-color: #008fd6;
+            border: none;
             border-radius: 5px;
-            animation: livePulse 1.5s infinite;
+            cursor: pointer;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .join-telegram-btn:hover {
+            background-color: #006bb3;
         }
     </style>
 </head>
 <body>
 
-    <h1>Live Events</h1>
-    <div class="event-container" id="events"></div>
+    <!-- Loading Message -->
+    <div class="loading-message">Wait For 10-15 Sec For Loading The Stream </div>
 
-    <script>
-        async function fetchEvents() {
-            try {
-                const response = await fetch("https://raw.githubusercontent.com/drmlive/fancode-live-events/refs/heads/main/fancode.json");
-                const data = await response.json();
-                
-                // Debugging line to check the structure of the fetched data
-                console.log(data);
+    <!-- Video Player Section -->
+    <div class="player-container">
+        <div style="padding:56.25% 0 0 0;position:relative;">
+            <iframe id="contentFrame" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" 
+            frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no" 
+            src="https://sliv.fredflix.fun/play.php?id=sony_ten1hd" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+        </div>
+    </div>
 
-                const container = document.getElementById("events");
-                container.innerHTML = ""; // Clear the container before adding new events
-
-                // Check if matches data exists
-                if (data.matches && Array.isArray(data.matches)) {
-                    data.matches.forEach(event => {
-                        const eventDiv = document.createElement("div");
-                        eventDiv.classList.add("event");
-
-                        let eventDate = new Date(event.startTime);
-                        let formattedDate = eventDate.toLocaleDateString();
-                        let formattedTime = eventDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                        let isLive = event.status === "LIVE"; // Check if match is live
-                        let videoLink = event.dai_url ? `https://Teamro45.fwh.is/Teamrom3u8newplyr.html?id=${event.dai_url}` : "#";
-
-                        // Log the current event data to debug
-                        console.log(event);
-
-                        eventDiv.innerHTML = `
-                            <img src="${event.src}" alt="${event.title}">
-                            ${isLive ? `<div class="live-badge">LIVE</div>` : ""}
-                            <div class="event-content">
-                                <div class="title">${event.title}</div>
-                                <div class="league">${event.event_name}</div>
-                                <div class="buttons">
-                                    ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Watch Now</a>` : ''}
-                                    ${event.dai_url ? `<a href="${videoLink}" target="_blank" class="watch-btn">Ad-Free</a>` : ''}
-                                </div>
-                            </div>
-                        `;
-                        container.appendChild(eventDiv);
-                    });
-                } else {
-                    console.error("No 'matches' found in the data.");
-                }
-
-            } catch (error) {
-                console.error("Error fetching events:", error);
-            }
-        }
-
-        fetchEvents();
-    </script>
+    <!-- Join Telegram Button -->
+    <div class="join-telegram-container">
+        <button class="join-telegram-btn" onclick="window.open('https://t.me/+e6G48oujQuExOTg1', '_blank')">Join Telegram Channel</button>
+    </div>
+<script>
+// alert('Join Our Telegram For Latest update')
+         if (confirm("Join Our Telegram Channel @teamrohitoffical45") == true) {
+         window.open("https://t.me/+e6G48oujQuExOTg1", '_blank');
+     }
+</script>
 
 </body>
 </html>
